# homebrew_os

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  build  link.ld  run  script.gdb
bootboot/: os.json
knowledge/: paging.md
src/: bootboot.rs  console.rs  gdt.rs  initrd.rs  main.rs  math.rs  screen.rs
src/interrupts/: handlers.rs  mod.rs
src/memory/: allocator.rs  frame.rs  mod.rs
triplets/: os.json
